--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -176,6 +176,7 @@
                     }
 
                     players[peer.id] = {
+                        "playerID": peer.id,
                         "playerName": clientPlayerName,
                         "inPlay": true,
                         "role": "NA",
@@ -272,6 +273,7 @@
 
 
             function setPlayerData(playerID, newName, inPlay) {
+                players[playerID]["playerID"] = playerID;
                 players[playerID]["inPlay"] = inPlay;
                 players[playerID]["playerName"] = newName;
                 players[playerID]["role"] = "NA";
@@ -489,7 +491,7 @@
                         "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
                 } else {
                     playersInGameList = playersInGameList +
-                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote(\"" + playersInGame[player] + "\")\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
+                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote(" + playersInGame[player]['playerID'] + ")\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
                 }
             }
             // Send players data to everyone connected, so they can update their player lists
