--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -479,6 +479,18 @@
                     $('#eliminated-player-name').text(playersInGame[playerID]["playerName"])
                     $('#eliminated-slide').fadeIn(500);
                 });
+
+            setTimeout(() => {
+                transitionBackToGiveClue();
+            }, 7000);
+        }
+
+        function transitionBackToGiveClue() {
+            $('#eliminated-slide').fadeOut(500)
+                .promise()
+                .then(function () {
+                    $('#give-clue-slide').fadeIn(500);
+                });
         }
 
         function updatePlayersInGameList() {
@@ -488,10 +500,16 @@
             for (var player in playersInGame) {
                 if (peer.id == player) {
                     playersInGameList = playersInGameList +
-                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
+                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" +
+                        playersInGame[player]["playerName"] +
+                        "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
                 } else {
                     playersInGameList = playersInGameList +
-                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote('" + playersInGame[player]['playerID'] + "')\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
+                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" +
+                        playersInGame[player]["playerName"] + "</p><div onclick=\"castVote('" + playersInGame[player][
+                            'playerID'
+                        ] +
+                        "')\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
                 }
             }
             // Send players data to everyone connected, so they can update their player lists
