--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -109,6 +109,12 @@
                     </div>
                 </div>
             </div>
+            <div id="eliminated-slide" class="no-display">
+                <div class="Main-mid-container center-text">
+                    <h3 id="eliminated-player-name"></h3><br>
+                    <p>has been eliminated.</p>
+                </div>
+            </div>
         </div>
     </div>
 
