--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -490,19 +490,20 @@
         }
 
         function triggerAnnounceWinner(winners, mimicsWon) {
-            winnersList = "";
+            let winnersList = "";
+            let winningTeamText = "";
 
             // Set the winning player list
-            for (var player in playersInGame) {
-                if (peer.id == player) {
+            for (let step = 0; step < winners.length; step++) {
+                if (peer.id == winners[step]) {
                     winnersList = winnersList +
                         "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" +
-                        playersInGame[player]["playerName"] +
+                        playersInGame[winners[step]]["playerName"] +
                         "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
                 } else {
                     winnersList = winnersList +
                         "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" +
-                        playersInGame[player]["playerName"] + "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
+                        playersInGame[winners[step]]["playerName"] + "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
                 }
             }
             // Set the winning player list to the element
@@ -510,10 +511,21 @@
 
             // Set the winning team text
             if (mimicsWon) {
-                $('#winning-team').text("Mimics Won!");
+                if (players[peer.id]["role"] == "Mimic") {
+                    winningTeamText = "You Won!, ";
+                } else {
+                    winningTeamText = "You Lost!, ";
+                }
+                winningTeamText = winningTeamText + "Mimics Won!";
             } else {
-                $('#winning-team').text("Civilians Won!");
+                if (players[peer.id]["role"] == "Civilian") {
+                    winningTeamText = "You Won!, ";
+                } else {
+                    winningTeamText = "You Lost!, ";
+                }
+                winningTeamText = winningTeamText + "Civilians Won!";
             }
+            $('#winning-team').text(winningTeamText);
 
             // Show the winners slide
             $('.slide').fadeOut(500)
@@ -550,7 +562,7 @@
         }
     </script>
 
-    <script src="./mimicGameLogic.js?v=0.8">
+    <script src="./mimicGameLogic.js?v=0.81">
     </script>
 </body>
 
