--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -120,7 +120,8 @@
             </div>
             <div id="winner-slide" class="no-display slide">
                 <div class="Main-mid-container">
-                    <h3 id="winning-team" style="text-align: center;"></h3><br>
+                    <h3 id="winning-team" style="text-align: center;"></h3><br><br>
+                    <h3>Winners:</h3><br>
                     <div id="winning-player-list">
                     </div>
                 </div>
