--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -281,7 +281,7 @@
                             break;
                         case 'playersInGameData':
                             playersInGame = data[1];
-                            updatePlayerList();
+                            updatePlayersInGameList();
                             break;
                         case 'triggerRound':
                             triggerCurrentRound();
