--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -480,6 +480,7 @@
                     .fadeOut(500)
                     .promise()
                     .then(function () {
+                        $('.slide').hide();
                         $('#give-clue-player-name').text(playersInGame[playerID]["playerName"])
                         $('#give-clue-slide').fadeIn(500);
                     });
@@ -493,6 +494,7 @@
                             $('#confirm-clue-button').addClass('no-display');
                         }
                         $('#give-clue-player-name').text(playersInGame[playerID]["playerName"])
+                        $('.slide').hide();
                         $('#give-clue-slide').fadeIn(500);
                     });
             }
@@ -503,6 +505,7 @@
             $('.slide').fadeOut(500)
                 .promise()
                 .then(function () {
+                    $('.slide').hide();
                     $('#take-vote-slide').fadeIn(500);
                 });
         }
@@ -520,6 +523,7 @@
             $('.slide').fadeOut(500)
                 .promise()
                 .then(function () {
+                    $('.slide').hide();
                     $('#eliminated-slide').fadeIn(500);
                 });
         }
@@ -566,6 +570,7 @@
             $('.slide').fadeOut(500)
                 .promise()
                 .then(function () {
+                    $('.slide').hide();
                     $('#winner-slide').fadeIn(500);
                 });
         }
